--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <h1>Hello World!</h1>
     <p>Adding another line!</p>
     <p>Adding another line!</p>
+    <p>Adding another line!</p>
     <p>This page was generated {{ NOW }}.</p>
   </body>
 </html>
