--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World_!</title>
+    <title>Hello World!</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>Adding another line!</p>
-    <p>Adding another line!</p>
-    <p>Adding another line!</p>
-    <p>Adding another line!</p>
     <p>Adding another line!</p>
     <p>This page was generated {{ NOW }}.</p>
   </body>
