--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
     <p>Adding another line!</p>
     <p>This page was generated {{ NOW }}.</p>
   </body>
